--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,25 @@
     <build>
         <pluginManagement>
             <plugins>
+
+                <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.22.2</version>
+                    <configuration>
+                        <properties>
+                            <configurationParametrs>
+                                junit.jupiter.execution.parallel.enabled=true
+                                junit.jupiter.execution.parallel.config.strategy=fixed
+                                junit.jupiter.execution.parallel.config.fixed.parallelism=2
+
+                            </configurationParametrs>
+                        </properties>
+                    </configuration>
+                </plugin>
+
+
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
