--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,6 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-params -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
@@ -40,39 +39,33 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.junit.platform/junit-platform-launcher -->
         <dependency>
             <groupId>org.junit.platform</groupId>
             <artifactId>junit-platform-launcher</artifactId>
             <version>1.5.2</version>
             <scope>test</scope>
         </dependency>
-
-
-
     </dependencies>
 
     <build>
         <pluginManagement>
             <plugins>
-
-                <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.22.2</version>
                     <configuration>
                         <properties>
-                            <configurationParametrs>
+                            <configurationParameters>
                                 junit.jupiter.execution.parallel.enabled=true
-                                junit.jupiter.execution.parallel.config.strategy=fixed
-                                junit.jupiter.execution.parallel.config.fixed.parallelism=2
 
-                            </configurationParametrs>
+                                junit.jupiter.execution.parallel.mode.default=concurrent
+                                junit.jupiter.execution.parallel.config.strategy=fixed
+                                junit.jupiter.execution.parallel.config.fixed.parallelism=10
+                            </configurationParameters>
                         </properties>
                     </configuration>
                 </plugin>
-
 
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
