--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,11 @@
     <artifactId>test</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <allure-maven.reportVersion>2.12.1</allure-maven.reportVersion>
+        <aspectj.version>1.9.5</aspectj.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
@@ -33,6 +38,11 @@
         </dependency>
 
         <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-junit-platform</artifactId>
+            <version>2.13.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
             <version>5.5.2</version>
@@ -45,6 +55,13 @@
             <version>1.5.2</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>${aspectj.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -55,6 +72,9 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.22.2</version>
                     <configuration>
+                        <argLine>
+                            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                        </argLine>
                         <properties>
                             <configurationParameters>
                                 junit.jupiter.execution.parallel.enabled=true
@@ -64,7 +84,24 @@
                                 junit.jupiter.execution.parallel.config.fixed.parallelism=10
                             </configurationParameters>
                         </properties>
+                        <systemProperties>
+                            <property>
+                                <name>allure.results.directory</name>
+                                <value>${project.build.directory}/allure-results</value>
+                            </property>
+                        </systemProperties>
                     </configuration>
+                </plugin>
+
+                <plugin>
+
+                    <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-maven -->
+
+                    <groupId>io.qameta.allure</groupId>
+                    <artifactId>allure-maven</artifactId>
+                    <version>2.10.0</version>
+
+
                 </plugin>
 
                 <plugin>
